_sass/hero.scss
.hero {
  width: 100%;
  padding: 0 0 120px;
  position: relative;
  background-position: center;
  background-size: cover;
  z-index: 1;
  font-size: 80px;
  line-height: 0;

  &--home {
    background-image: url('/img/home-hero.jpg');
  }

  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: linear-gradient(285deg, rgba(62, 168, 245, 0.8), rgba(118, 191, 67, 0.9));
    z-index: -1;
  }

  &__header {
    color: $white;
    font-family: Montserrat;
    font-size: 1em;
    font-weight: bold;
    line-height: 1.2;
    margin: 60px 0 40px;

    @media screen and (max-width: $medium-break-point) {
      font-size: 0.6em;
    }

    @media screen and (max-width: $small-break-point) {
      font-size: 0.4em;
    }
  }

  &__buttons {
    font-size: 0;
  }
}

